// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows error pane 1`] = `
<nav
  className="TabNav"
>
  <ul>
    <li>
      <a
        className="tabLink "
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li>
      <a
        className="tabLink tabLink--errors tabLink--is-selected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
        
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows logs 1`] = `
<nav
  className="TabNav"
>
  <ul>
    <li>
      <a
        className="tabLink tabLink--is-selected"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li>
      <a
        className="tabLink tabLink--errors "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
        
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows the number of errors in the error tab 1`] = `
<nav
  className="TabNav"
>
  <ul>
    <li>
      <a
        className="tabLink "
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li>
      <a
        className="tabLink tabLink--errors tabLink--is-selected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
        <span
          className="tabLink-alertBadge"
        >
          27
        </span>
      </a>
    </li>
  </ul>
</nav>
`;
